--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity
             android:name="com.example.sairamkrishna.myapplication.MainActivity"
             android:label="@string/app_name"
-            android:configChanges="orientation">
+            android:configChanges="orientation|keyboardHidden|screenSize">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
